# cfar

./: .cproject  .project  CMakeLists.txt  test_log.txt
include/: cfar.h
src/: compare_data.c  compute_time.c  main.c
src/cfar/: cfar.c  cfar.cl
